운동뷰어통합

--- a/VoiceRecognitionSample/app/src/main/res/values/strings.xml
+++ b/VoiceRecognitionSample/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
  limitations under the License.
 -->
 <resources>
-    <string name="app_name">Voice Recognition Sample</string>
+    <string name="app_name">Workout routine app Sample</string>
     <string name="voice_instruction">Tap to start voice recognition</string>
+    <string name="voice_instruction2">Tap to set timer</string>
+    <string name="voice_instruction3">Say whatever you want to record</string>
 </resources>
